Closed Bug 321706 Opened 19 years ago Closed 17 years ago

Some elements of pages in sub-directories are not loaded if the URL ends by /.

Categories

(Core :: Networking, defect)

defect
Not set
minor

Tracking

()

RESOLVED FIXED
mozilla1.9alpha6

People

(Reporter: romain, Assigned: florian)

References

()

Details

Attachments

(2 files, 1 obsolete file)

This works only on a page placed in a sub directory of a site, like per example :
http://www.mozilla.com/firefox/

When the URL ends by "/." :
 - First the url is changed in the location bar, the final . is removed
 - Elements of that page which are called from relative URL are not loaded anymore

http://www.mozilla.com/firefox/
Now look on
http://www.mozilla.com/firefox/?/.
Some elements disappeared, because the browser try to load :
http://www.mozilla.com/firefox../download.js instead of http://www.mozilla.com/download.js

http://r.bezut.free.fr/testcase/errloading.html
http://r.bezut.free.fr/testcase/errloading.html?/.
It's an other example wich is more obvious.
for reference, the bugzilla links are not equivalent to what the reporter wants people to visit.
Status: NEW → ASSIGNED
Component: General → Networking
Product: Firefox → Core
Hardware: PC → All
Version: unspecified → Trunk
Attached patch patch v1Splinter Review
Assignee: nobody → f.qu
Attachment #263070 - Flags: superreview?(bzbarsky)
Attachment #263070 - Flags: review?(bzbarsky)
I'm the wrong reviewer for this code.  Try biesi?
Attachment #263070 - Flags: review?(bzbarsky) → review?(cbiesinger)
QA Contact: general → networking
Attachment #263070 - Flags: review?(cbiesinger) → review+
Please do write a unit test for this, you should be able to use just nsIIOService.newURI there.
Attached patch unit test (obsolete) — Splinter Review
Attachment #266974 - Flags: review?(cbiesinger)
Attachment #263070 - Flags: superreview?(bzbarsky) → superreview?(cbiesinger)
Comment on attachment 266974 [details] [diff] [review]
unit test

please remove the second empty line
Attachment #266974 - Flags: review?(cbiesinger) → review+
Attached patch unit test - v2Splinter Review
Removed the second empty line
Added a test of .path
Added a test of relative url.
Attachment #266974 - Attachment is obsolete: true
Attachment #263070 - Flags: superreview?(cbiesinger) → superreview+
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9alpha6
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: