Bug 321706 - Some elements of pages in sub-directories are not loaded if the URL ends by /.patch by Florian Quèze <f.qu@queze.net>, r+sr=cbiesinger